tests: fix Makefile so it is portable to gmake 3.x
In commit 0355d6d047884f5b we used a Makefile shell assignment syntax
which is compatible with pmake and gmake 4.x, but which breaks on
gmake 3.x.  So only use the pmake-compatible construction if we are
not using GNU make.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -37,7 +37,8 @@ mke2fs.conf: $(srcdir)/mke2fs.conf.in
 
 always_run:
 
-TESTS != echo $(srcdir)/[a-z]_*
+@ifGNUmake@TESTS=$(wildcard $(srcdir)/[a-z]_*)
+@ifNotGNUmake@TESTS != echo $(srcdir)/[a-z]_*
 
 $(TESTS):: test_one always_run
 	@./test_one $@
