--- a/misc/e2undo.8.in
+++ b/misc/e2undo.8.in
@@ -11,6 +11,9 @@ e2undo \- Replay an undo log for an ext2/ext3/ext4 filesystem
 .B \-f
 ]
 [
+.B \-h
+]
+[
 .B \-n
 ]
 [
@@ -36,6 +39,9 @@ with the filesystem on the device.  If they do not match,
 will refuse to apply the undo log as a safety mechanism.  The
 .B \-f
 option disables this safety mechanism.
+.TP
+.B \-h
+Display a usage message.
 .TP
 .B \-n
 Dry-run; do not actually write blocks back to the filesystem.
