--- a/misc/lsattr.1.in
+++ b/misc/lsattr.1.in
@@ -5,7 +5,7 @@ lsattr \- list file attributes on a Linux second extended file system
 .SH SYNOPSIS
 .B lsattr
 [
-.B \-RVadpv
+.B \-RVadlpv
 ]
 [
 .I files...
@@ -29,11 +29,15 @@ List all files in directories, including files that start with `.'.
 .B \-d
 List directories like other files, rather than listing their contents.
 .TP
-.B \-v
-List the file's version/generation number.
+.B \-l
+Print the options using a long names instead of a single
+character abbreviation.
 .TP
 .B \-p
 List the file's project number.
+.TP
+.B \-v
+List the file's version/generation number.
 .SH AUTHOR
 .B lsattr
 was written by Remy Card <Remy.Card@linux.org>.  It is currently being
