More man page and usage message fixups
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/e2fsck/e2fsck.conf.5.in
+++ b/e2fsck/e2fsck.conf.5.in
@@ -210,7 +210,7 @@ Use this percentage of memory to try to read in metadata blocks ahead of the
 main e2fsck thread.  This should reduce run times, depending on the speed of
 the underlying storage and the amount of free memory.  There is no default, but
 see
-.B readahead_mem_pct
+.B readahead_kb
 for more details.
 .TP
 .I readahead_kb
